[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navcom"
version = "0.1.4"
description = "Search and recall context from past CLI coding sessions (Claude, Gemini, Codex)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
navcom = "navcom:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["navcom.py"]
